--- a/templates/sante.html
+++ b/templates/sante.html
@@ -226,7 +226,7 @@
         <p>Surface SCB (Wallace) et profondeur.</p>
     </a>
 
-    <a href="#" class="tool-card">
+    <a href="glasgow.html" class="tool-card">
         <div class="status-badge">Score</div>
         <div class="icon-box"><i class="fas fa-brain"></i></div>
         <h3>Glasgow</h3>
@@ -250,6 +250,7 @@
 
 <footer>
     &copy; 2026 NKONVERT SANTE. Ne remplace pas l'avis d'un médecin.
+    ps: application programmée par un personnel soignant
 </footer>
 
 </body>
