--- a/templates/sante.html
+++ b/templates/sante.html
@@ -233,7 +233,7 @@
         <p>Évaluation de l'état de conscience (YVM).</p>
     </a>
 
-    <a href="#" class="tool-card">
+    <a href="masse.html" class="tool-card">
         <div class="status-badge">Calcul</div>
         <div class="icon-box"><i class="fas fa-weight"></i></div>
         <h3>IMC / SC</h3>
